
cmake_minimum_required(VERSION 2.8)
project(examples)


include_directories("/usr/include/eigen3")
add_executable(coordinateTransform coordinateTransform.cpp)

# 会自己去找路径
find_package(Pangolin REQUIRED)
include_directories(${Pangolin_INCLUDE_DIRS})
add_executable(plotTrajectory plotTrajectory.cpp)
target_link_libraries(plotTrajectory ${Pangolin_LIBRARIES})





